# cdk-aws-lambda-otlp-forwarder

./: .projenrc.ts  README.md  package.json  pnpm-lock.yaml
.projen/: deps.json  tasks.json
src/: main.ts
src/functions/client/node/: index.ts
src/functions/client/python/: pyproject.toml  requirements.txt
src/functions/client/rust/: Cargo.toml
src/functions/client/rust/src/: main.rs
src/functions/forwarder/: Cargo.toml
src/functions/service/: Cargo.toml
src/stacks/: my-stack.ts
