[package]
name = "lambda-otlp-forwarder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "log_processor"
path = "src/log_processor.rs"

[[bin]]
name = "span_processor"
path = "src/span_processor.rs"

[dependencies]
# AWS Labs
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.1"
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["cloudwatch_logs"] }
aws-sdk-secretsmanager = { version = "1.55.0", features = ["behavior-version-latest"] }
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }

# Lambda Utils
lambda-otel-utils = "0.3.0"
otlp-sigv4-client = "0.3.0"
otlp-stdout-client = "0.3.0"

# OTel Instrumentation
opentelemetry = { version = "0.27.1", features = ["trace"] }

# Others
anyhow = "1.0.94"
base64 = "0.22.1"
flate2 = "1.0"
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
url = "2.5.4"

[dev-dependencies]
wiremock = "0.6"
mockito = "1.6"
tokio = { version = "1.42", features = ["full"] }
