[package]
name = "client-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS Labs
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["apigw", "alb"] }
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }

# Lambda Utils
lambda-lw-http-router = "0.3.0"
lambda-otel-utils = "0.3.0"

# Others
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
